--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -93,6 +93,52 @@
       "torch.Size([256, 10])\n",
       "torch.Size([256])\n",
       "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
+      "torch.Size([256])\n",
+      "torch.Size([256, 10])\n",
       "torch.Size([256])\n"
      ]
     }
