--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import sys\n",
+    "\n",
+    "# sys.path.append('/content/drive/MyDrive/Colab Notebooks/Files/torchROAR')\n",
+    "# from roar import *"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
